--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,216 @@
 html {
-  background: #0025ff;
-  color: #fff;
+  background: rgb(233, 197, 203);
+  color: black;
+  font-family: 'Open Sans', sans-serif;
+}
+
+body {
+  margin: 0;
+}
+
+/****HEADER****/
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.headline p, h1 {
+  text-align: center;
+}
+
+
+.logo {
+  width: 75px;
+  margin: 5px;
+  border: 2px dotted rgb(211, 129, 200);
+  border-radius: 16px;
+}
+
+.navigation {
+  display: none;
+}
+
+/****HEADLINE****/
+.headline {
+  background-color: rgb(211, 129, 200);
+  padding: 16px;
+  margin-bottom: 24px;
+  
+}
+
+/****BIG NEWS****/
+.big-news {
+  display: flex;
+  flex-direction: column;
+}
+
+.big-news img {
+  width: 100%;
+  border-radius: 16px;
+}
+
+
+.big-news h2, p {
+  text-align: center; 
+  margin: 20px;
+ }
+
+/****SMALL NEWS****/
+
+.small-news {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /*border: 3px solid black;*/
+}
+
+.small-news img {
+  width: 95%;
+  border-radius: 16px;
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
+.small-news p {
+  margin-right: 10px;
+  margin-left: 10px;
+  text-align: center;
+}
+
+.small-news-card {
+  text-align: center;
+}
+
+.small-news-card a {
+  text-decoration: none;
+  color: rgb(211, 129, 200);
+}
+
+.small-news-card a:hover {
+  color: black;
+  text-decoration: none;
+}
+
+/****FOOTER****/
+
+.footer {
+  padding: 2px;
+  text-align: center;
+  background-color:  rgb(211, 129, 200);
+  margin-top: 24px;
+}
+
+
+
+
+
+
+/*MEDIA QUERIES****/
+
+/* Tablet */
+
+@media (min-width: 768px) {
+
+  .logo {
+    display: none;
+  }
+  .navigation {
+    display: flex;
+  }
+  
+  .navigation-text {
+    margin: 10px;
+    border: 2px solid  rgb(211, 129, 200);
+    border-radius: 16px;
+    padding: 10px;
+    color: black; 
+  }
+
+    .navigation a {
+      text-decoration: none;
+    }
+
+  .navigation-text:hover {
+    color: rgb(211, 129, 200);
+    text-decoration: none;
+  }
+  
+  .small-news {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
+
+  .small-news-card {
+    margin: 10px;
+    text-align: center;
+    margin-bottom: 25px;
+    width: 40%;
+  }
+}
+
+
+
+/* Small desktop */
+
+@media (min-width: 992px) {
+ .big-news {
+   display: flex;
+   flex-direction: row;
+   align-items: center;
+   margin: 16px;
+   margin-bottom: 24px;
+   
+ }
+.big-news-card h2 {
+  text-align: center;
+  margin: 5px;
+}
+}
+
+
+
+
+
+
+/* Big desktop */
+
+@media (min-width: 1200px) {
+ .big-news {
+   display: flex;
+   flex-direction: row;
+   align-items: center;
+ }
+
+ .big-news-card {
+   display: flex;
+   flex-direction: row;
+   margin-bottom: 40px;
+ }
+ 
+ .big-news img {
+   width: 60%;
+ }
+
+ .big-news h2, p {
+  text-align: center; 
+  margin: 20px;
+  margin: 40px;
+ }
+
+ .small-news {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+
+.small-news-card {
+  margin: 30px;
+  text-align: center;
+  margin-bottom: 25px;
+  width: 20%;
+}
+
 }
