add some hovers and animations

--- a/code/assets/css/general.css
+++ b/code/assets/css/general.css
@@ -32,3 +32,9 @@ ul {
 .block {
   display: block;
 }
+
+.shadow {
+  -webkit-box-shadow: 0px 1px 3px 0px rgba(120, 120, 120, 0.22);
+  -moz-box-shadow: 0px 1px 3px 0px rgba(120, 120, 120, 0.22);
+  box-shadow: 0px 1px 3px 0px rgba(120, 120, 120, 0.22);
+}
