--- a/code/style.css
+++ b/code/style.css
@@ -29,16 +29,61 @@
    
      }
 
-  
-     
- 
+
 
   .navigation-item {
 
       margin-right: 10px;
+      
+  
 
     }
+
+
+    @media (max-width: 767px) {
+
+      .navigation-item {
+
+        width: 100%;
+        height: 100px;
+        background-color: yellow; /*To show the change in mobile only*/
+
+      }
+
+
+
+    }
+
+
+    @media (min-width: 768px) and max {
+     
+      .navigation-item {
+
+        width: 100%;
+        height: 100px;
+        flex-direction: column;
+
+    }
+
+
+  }
   
+    @media (min-width: 1200px) {
+
+      .navigation-item {
+
+        width: 100%;
+        height: 100px;
+        
+
+
+      }
+
+
+    }
+
+
+
   .navigation-item: last-child {
   
   margin-right: 0
@@ -94,6 +139,25 @@
     text-align: justify;
 
 }
+
+
+@media (max-width: 767px) {
+
+  .container { 
+    
+  width: 100%;
+  height: 400px;
+  margin: 5px;
+  flex-direction: column;
+  
+
+}
+
+    }  
+
+
+
+
 .news-cardthree {
   width: 100%;
   display: flex;
@@ -105,7 +169,11 @@
     width:200px;
     height:200px;
     border: solid black;
+    
+
 }
+
+
 .image img {
     width: 100%;
     height: auto;
@@ -126,6 +194,7 @@
   display:flex;
   flex-direction: column;
   width: 20%;
+  text-align: justify;
   
   
   }
