--- a/code/style.css
+++ b/code/style.css
@@ -73,7 +73,7 @@ body {
   justify-content: flex-end;
   width: 100%;
   height: 180px;
-  background:rgba(0, 0, 0, 0.575);
+  background: rgba(0, 0, 0, 0.575);
 }
 
 /* styling of page name text in the header */
@@ -84,15 +84,15 @@ body {
   align-self: flex-end;
 }
 
-.logo img, .logo-simple img  {
+.logo img,
+.logo-simple img {
   width: 100%;
   max-height: 100%;
   object-fit: cover;
 }
 
 /*hides the simpler logo used only for mobile device*/
-.logo-simple
-{
+.logo-simple {
   display: none;
   position: relative;
   align-self: flex-end;
@@ -134,6 +134,11 @@ body {
   font-size: 16px;
 }
 
+/* because it's gonna be used on mobile devices, don't want the other a:hover effects to be applied in a non-optimal way. So setting a neutral background */
+.menu-button:hover {
+  background-color: black;
+}
+
 /* navbar menu content styling, container used for placing menu links with flexbox */
 .menu-content {
   display: flex;
@@ -156,13 +161,13 @@ body {
 }
 
 /* links in navbar change background-color and text color on mouse over */
-.nav a:hover {
+.menu-content a:hover {
   background-color: #f1df77;
   color: black;
 }
 
 /* links in navbar change background-color when mouse is clicked down */
-.nav a:active {
+.menu-content a:active {
   background-color: rgb(255, 252, 64);
 }
 
@@ -439,7 +444,7 @@ p:hover {
 
 @media screen and (max-device-width: 1024px),
 (max-width:1200px) {
-  
+
   .header {
     height: 30em;
     justify-content: center;
@@ -449,11 +454,11 @@ p:hover {
     justify-content: center;
   }
 
-   /* styling of logo in the header. '*/
-   .logo {
+  /* styling of logo in the header. '*/
+  .logo {
     width: 190px;
     height: 100px;
-   }
+  }
 
   /* adapting the meteor animation to smaller screen */
   .meteor {
@@ -539,7 +544,7 @@ p:hover {
   }
 
   .logo {
-    display:none;
+    display: none;
   }
 
   .logo-simple {
