--- a/style.css
+++ b/style.css
@@ -29,7 +29,17 @@ header {
   text-align: center;
   line-height: 60px;
   font-style: italic;
+  background-color: #FFF;
+  animation-name: example;
+  animation-duration: 4s;
 }
+
+.logo:hover {
+  background-color: black;
+  color: #FFF;
+  transition-duration: 1s;
+}
+
 /* The P in the logo */
 .P {
   margin: 0;
@@ -37,7 +47,7 @@ header {
 }
 
 .title {
-  margin: 0 10px;
+  margin: 0 20px;
 }
 
 .nav {
@@ -137,12 +147,15 @@ footer {
   height: 50px;
   width: 95%;
   margin: 45px auto 0;
+  padding-top: 1px;
+  align-content: center;
   border-top: solid 0.5px black;
   border-top-width: 80%;
+  font-size: 12px;
 }
 
 h1 {
-  font-size: 30px;
+  font-size: 20px;
   font-family: 'Vollkorn', serif;
   margin: 0;
 }
@@ -175,7 +188,7 @@ h4 {
 
 
 /*** MEDIA QUERIES ***/
-@media (min-width: 667px) /*and (max-width: 1024px)*/ {
+@media (min-width: 667px) {
   header {
     justify-content: space-between;
     padding: 0 30px; 
